hw3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> class_decl_list
Rule 2     class_decl_list -> class_decl class_decl_list
Rule 3     class_decl_list -> <empty>
Rule 4     class_decl -> CLASS ID extends LBRACE newscope class_body_decl_list RBRACE
Rule 5     newscope -> <empty>
Rule 6     class_decl -> CLASS ID extends LBRACE error RBRACE
Rule 7     extends -> EXTENDS ID
Rule 8     extends -> <empty>
Rule 9     class_body_decl_list -> class_body_decl_list class_body_decl
Rule 10    class_body_decl_list -> class_body_decl
Rule 11    class_body_decl -> field_decl
Rule 12    class_body_decl -> method_decl
Rule 13    class_body_decl -> constructor_decl
Rule 14    field_decl -> mod var_decl
Rule 15    method_decl -> mod VOID ID LPAREN methodscope param_list_opt RPAREN block
Rule 16    methodscope -> <empty>
Rule 17    method_decl -> mod type ID LPAREN param_list_opt RPAREN block
Rule 18    constructor_decl -> mod ID LPAREN constructorscope param_list_opt RPAREN block
Rule 19    constructorscope -> <empty>
Rule 20    mod -> visibility_mod storage_mod
Rule 21    visibility_mod -> PUBLIC
Rule 22    visibility_mod -> PRIVATE
Rule 23    visibility_mod -> <empty>
Rule 24    storage_mod -> STATIC
Rule 25    storage_mod -> <empty>
Rule 26    var_decl -> type var_list SEMICOLON
Rule 27    type -> INT
Rule 28    type -> BOOLEAN
Rule 29    type -> FLOAT
Rule 30    type -> ID
Rule 31    var_list -> var_list COMMA var
Rule 32    var_list -> var
Rule 33    var -> ID
Rule 34    var -> var LBRACKET RBRACKET
Rule 35    param_list_opt -> param_list
Rule 36    param_list_opt -> <empty>
Rule 37    param_list -> param_list COMMA param
Rule 38    param_list -> param
Rule 39    param -> type ID
Rule 40    block -> LBRACE stmt_list RBRACE
Rule 41    block -> LBRACE stmt_list error RBRACE
Rule 42    stmt_list -> <empty>
Rule 43    stmt_list -> stmt_list stmt
Rule 44    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 45    stmt -> IF LPAREN expr RPAREN stmt
Rule 46    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 47    stmt -> FOR LPAREN stmt_expr_opt SEMICOLON expr_opt SEMICOLON stmt_expr_opt RPAREN stmt
Rule 48    stmt -> RETURN expr_opt SEMICOLON
Rule 49    stmt -> stmt_expr SEMICOLON
Rule 50    stmt -> BREAK SEMICOLON
Rule 51    stmt -> CONTINUE SEMICOLON
Rule 52    stmt -> block
Rule 53    stmt -> var_decl
Rule 54    stmt -> error SEMICOLON
Rule 55    literal -> INT_CONST
Rule 56    literal -> FLOAT_CONST
Rule 57    literal -> STRING_CONST
Rule 58    literal -> NULL
Rule 59    literal -> TRUE
Rule 60    literal -> FALSE
Rule 61    primary -> literal
Rule 62    primary -> THIS
Rule 63    primary -> SUPER
Rule 64    primary -> LPAREN expr RPAREN
Rule 65    primary -> NEW ID LPAREN args_opt RPAREN
Rule 66    primary -> lhs
Rule 67    primary -> method_invocation
Rule 68    args_opt -> arg_plus
Rule 69    args_opt -> <empty>
Rule 70    arg_plus -> arg_plus COMMA expr
Rule 71    arg_plus -> expr
Rule 72    lhs -> field_access
Rule 73    lhs -> array_access
Rule 74    field_access -> primary DOT ID
Rule 75    field_access -> ID
Rule 76    array_access -> primary LBRACKET expr RBRACKET
Rule 77    method_invocation -> field_access LPAREN args_opt RPAREN
Rule 78    expr -> primary
Rule 79    expr -> assign
Rule 80    expr -> new_array
Rule 81    expr -> expr PLUS expr
Rule 82    expr -> expr MINUS expr
Rule 83    expr -> expr MULTIPLY expr
Rule 84    expr -> expr DIVIDE expr
Rule 85    expr -> expr EQ expr
Rule 86    expr -> expr NEQ expr
Rule 87    expr -> expr LT expr
Rule 88    expr -> expr LEQ expr
Rule 89    expr -> expr GT expr
Rule 90    expr -> expr GEQ expr
Rule 91    expr -> expr AND expr
Rule 92    expr -> expr OR expr
Rule 93    expr -> PLUS expr
Rule 94    expr -> MINUS expr
Rule 95    expr -> NOT expr
Rule 96    assign -> lhs ASSIGN expr
Rule 97    assign -> lhs INC
Rule 98    assign -> INC lhs
Rule 99    assign -> lhs DEC
Rule 100   assign -> DEC lhs
Rule 101   new_array -> NEW type dim_expr_plus dim_star
Rule 102   dim_expr_plus -> dim_expr_plus dim_expr
Rule 103   dim_expr_plus -> dim_expr
Rule 104   dim_expr -> LBRACKET expr RBRACKET
Rule 105   dim_star -> LBRACKET RBRACKET dim_star
Rule 106   dim_star -> <empty>
Rule 107   stmt_expr -> assign
Rule 108   stmt_expr -> method_invocation
Rule 109   stmt_expr_opt -> stmt_expr
Rule 110   stmt_expr_opt -> <empty>
Rule 111   expr_opt -> expr
Rule 112   expr_opt -> <empty>

Terminals, with rules where they appear

AND                  : 91
ASSIGN               : 96
BOOLEAN              : 28
BREAK                : 50
CLASS                : 4 6
COMMA                : 31 37 70
CONTINUE             : 51
DEC                  : 99 100
DIVIDE               : 84
DOT                  : 74
ELSE                 : 44
EQ                   : 85
EXTENDS              : 7
FALSE                : 60
FLOAT                : 29
FLOAT_CONST          : 56
FOR                  : 47
GEQ                  : 90
GT                   : 89
ID                   : 4 6 7 15 17 18 30 33 39 65 74 75
IF                   : 44 45
INC                  : 97 98
INT                  : 27
INT_CONST            : 55
LBRACE               : 4 6 40 41
LBRACKET             : 34 76 104 105
LEQ                  : 88
LPAREN               : 15 17 18 44 45 46 47 64 65 77
LT                   : 87
MINUS                : 82 94
MULTIPLY             : 83
NEQ                  : 86
NEW                  : 65 101
NOT                  : 95
NULL                 : 58
OR                   : 92
PLUS                 : 81 93
PRIVATE              : 22
PUBLIC               : 21
RBRACE               : 4 6 40 41
RBRACKET             : 34 76 104 105
RETURN               : 48
RPAREN               : 15 17 18 44 45 46 47 64 65 77
SEMICOLON            : 26 47 47 48 49 50 51 54
STATIC               : 24
STRING_CONST         : 57
SUPER                : 63
THIS                 : 62
TRUE                 : 59
VOID                 : 15
WHILE                : 46
error                : 6 41 54

Nonterminals, with rules where they appear

arg_plus             : 68 70
args_opt             : 65 77
array_access         : 73
assign               : 79 107
block                : 15 17 18 52
class_body_decl      : 9 10
class_body_decl_list : 4 9
class_decl           : 2
class_decl_list      : 1 2
constructor_decl     : 13
constructorscope     : 18
dim_expr             : 102 103
dim_expr_plus        : 101 102
dim_star             : 101 105
expr                 : 44 45 46 64 70 71 76 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 94 95 96 104 111
expr_opt             : 47 48
extends              : 4 6
field_access         : 72 77
field_decl           : 11
lhs                  : 66 96 97 98 99 100
literal              : 61
method_decl          : 12
method_invocation    : 67 108
methodscope          : 15
mod                  : 14 15 17 18
new_array            : 80
newscope             : 4
param                : 37 38
param_list           : 35 37
param_list_opt       : 15 17 18
pgm                  : 0
primary              : 74 76 78
stmt                 : 43 44 44 45 46 47
stmt_expr            : 49 109
stmt_expr_opt        : 47 47
stmt_list            : 40 41 43
storage_mod          : 20
type                 : 17 26 39 101
var                  : 31 32 34
var_decl             : 14 53
var_list             : 26 31
visibility_mod       : 20

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE newscope class_body_decl_list RBRACE
    (6) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    pgm                            shift and go to state 1
    class_decl                     shift and go to state 3
    class_decl_list                shift and go to state 4

state 1

    (0) S' -> pgm .



state 2

    (4) class_decl -> CLASS . ID extends LBRACE newscope class_body_decl_list RBRACE
    (6) class_decl -> CLASS . ID extends LBRACE error RBRACE

    ID              shift and go to state 5


state 3

    (2) class_decl_list -> class_decl . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE newscope class_body_decl_list RBRACE
    (6) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    class_decl_list                shift and go to state 6
    class_decl                     shift and go to state 3

state 4

    (1) pgm -> class_decl_list .

    $end            reduce using rule 1 (pgm -> class_decl_list .)


state 5

    (4) class_decl -> CLASS ID . extends LBRACE newscope class_body_decl_list RBRACE
    (6) class_decl -> CLASS ID . extends LBRACE error RBRACE
    (7) extends -> . EXTENDS ID
    (8) extends -> .

    EXTENDS         shift and go to state 8
    LBRACE          reduce using rule 8 (extends -> .)

    extends                        shift and go to state 7

state 6

    (2) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 2 (class_decl_list -> class_decl class_decl_list .)


state 7

    (4) class_decl -> CLASS ID extends . LBRACE newscope class_body_decl_list RBRACE
    (6) class_decl -> CLASS ID extends . LBRACE error RBRACE

    LBRACE          shift and go to state 9


state 8

    (7) extends -> EXTENDS . ID

    ID              shift and go to state 10


state 9

    (4) class_decl -> CLASS ID extends LBRACE . newscope class_body_decl_list RBRACE
    (6) class_decl -> CLASS ID extends LBRACE . error RBRACE
    (5) newscope -> .

    error           shift and go to state 12
    PUBLIC          reduce using rule 5 (newscope -> .)
    PRIVATE         reduce using rule 5 (newscope -> .)
    VOID            reduce using rule 5 (newscope -> .)
    ID              reduce using rule 5 (newscope -> .)
    INT             reduce using rule 5 (newscope -> .)
    BOOLEAN         reduce using rule 5 (newscope -> .)
    FLOAT           reduce using rule 5 (newscope -> .)
    STATIC          reduce using rule 5 (newscope -> .)

    newscope                       shift and go to state 11

state 10

    (7) extends -> EXTENDS ID .

    LBRACE          reduce using rule 7 (extends -> EXTENDS ID .)


state 11

    (4) class_decl -> CLASS ID extends LBRACE newscope . class_body_decl_list RBRACE
    (9) class_body_decl_list -> . class_body_decl_list class_body_decl
    (10) class_body_decl_list -> . class_body_decl
    (11) class_body_decl -> . field_decl
    (12) class_body_decl -> . method_decl
    (13) class_body_decl -> . constructor_decl
    (14) field_decl -> . mod var_decl
    (15) method_decl -> . mod VOID ID LPAREN methodscope param_list_opt RPAREN block
    (17) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (18) constructor_decl -> . mod ID LPAREN constructorscope param_list_opt RPAREN block
    (20) mod -> . visibility_mod storage_mod
    (21) visibility_mod -> . PUBLIC
    (22) visibility_mod -> . PRIVATE
    (23) visibility_mod -> .

    PUBLIC          shift and go to state 21
    PRIVATE         shift and go to state 14
    STATIC          reduce using rule 23 (visibility_mod -> .)
    VOID            reduce using rule 23 (visibility_mod -> .)
    ID              reduce using rule 23 (visibility_mod -> .)
    INT             reduce using rule 23 (visibility_mod -> .)
    BOOLEAN         reduce using rule 23 (visibility_mod -> .)
    FLOAT           reduce using rule 23 (visibility_mod -> .)

    class_body_decl                shift and go to state 16
    field_decl                     shift and go to state 19
    constructor_decl               shift and go to state 13
    method_decl                    shift and go to state 20
    visibility_mod                 shift and go to state 17
    class_body_decl_list           shift and go to state 15
    mod                            shift and go to state 18

state 12

    (6) class_decl -> CLASS ID extends LBRACE error . RBRACE

    RBRACE          shift and go to state 22


state 13

    (13) class_body_decl -> constructor_decl .

    RBRACE          reduce using rule 13 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 13 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 13 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 13 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 13 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 13 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 13 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 13 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 13 (class_body_decl -> constructor_decl .)


state 14

    (22) visibility_mod -> PRIVATE .

    STATIC          reduce using rule 22 (visibility_mod -> PRIVATE .)
    VOID            reduce using rule 22 (visibility_mod -> PRIVATE .)
    ID              reduce using rule 22 (visibility_mod -> PRIVATE .)
    INT             reduce using rule 22 (visibility_mod -> PRIVATE .)
    BOOLEAN         reduce using rule 22 (visibility_mod -> PRIVATE .)
    FLOAT           reduce using rule 22 (visibility_mod -> PRIVATE .)


state 15

    (4) class_decl -> CLASS ID extends LBRACE newscope class_body_decl_list . RBRACE
    (9) class_body_decl_list -> class_body_decl_list . class_body_decl
    (11) class_body_decl -> . field_decl
    (12) class_body_decl -> . method_decl
    (13) class_body_decl -> . constructor_decl
    (14) field_decl -> . mod var_decl
    (15) method_decl -> . mod VOID ID LPAREN methodscope param_list_opt RPAREN block
    (17) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (18) constructor_decl -> . mod ID LPAREN constructorscope param_list_opt RPAREN block
    (20) mod -> . visibility_mod storage_mod
    (21) visibility_mod -> . PUBLIC
    (22) visibility_mod -> . PRIVATE
    (23) visibility_mod -> .

    RBRACE          shift and go to state 24
    PUBLIC          shift and go to state 21
    PRIVATE         shift and go to state 14
    STATIC          reduce using rule 23 (visibility_mod -> .)
    VOID            reduce using rule 23 (visibility_mod -> .)
    ID              reduce using rule 23 (visibility_mod -> .)
    INT             reduce using rule 23 (visibility_mod -> .)
    BOOLEAN         reduce using rule 23 (visibility_mod -> .)
    FLOAT           reduce using rule 23 (visibility_mod -> .)

    class_body_decl                shift and go to state 23
    field_decl                     shift and go to state 19
    constructor_decl               shift and go to state 13
    method_decl                    shift and go to state 20
    visibility_mod                 shift and go to state 17
    mod                            shift and go to state 18

state 16

    (10) class_body_decl_list -> class_body_decl .

    RBRACE          reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    VOID            reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    ID              reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    INT             reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    FLOAT           reduce using rule 10 (class_body_decl_list -> class_body_decl .)
    STATIC          reduce using rule 10 (class_body_decl_list -> class_body_decl .)


state 17

    (20) mod -> visibility_mod . storage_mod
    (24) storage_mod -> . STATIC
    (25) storage_mod -> .

    STATIC          shift and go to state 26
    VOID            reduce using rule 25 (storage_mod -> .)
    ID              reduce using rule 25 (storage_mod -> .)
    INT             reduce using rule 25 (storage_mod -> .)
    BOOLEAN         reduce using rule 25 (storage_mod -> .)
    FLOAT           reduce using rule 25 (storage_mod -> .)

    storage_mod                    shift and go to state 25

state 18

    (14) field_decl -> mod . var_decl
    (15) method_decl -> mod . VOID ID LPAREN methodscope param_list_opt RPAREN block
    (17) method_decl -> mod . type ID LPAREN param_list_opt RPAREN block
    (18) constructor_decl -> mod . ID LPAREN constructorscope param_list_opt RPAREN block
    (26) var_decl -> . type var_list SEMICOLON
    (27) type -> . INT
    (28) type -> . BOOLEAN
    (29) type -> . FLOAT
    (30) type -> . ID

    VOID            shift and go to state 28
    ID              shift and go to state 33
    INT             shift and go to state 27
    BOOLEAN         shift and go to state 31
    FLOAT           shift and go to state 29

    var_decl                       shift and go to state 30
    type                           shift and go to state 32

state 19

    (11) class_body_decl -> field_decl .

    RBRACE          reduce using rule 11 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> field_decl .)
    VOID            reduce using rule 11 (class_body_decl -> field_decl .)
    ID              reduce using rule 11 (class_body_decl -> field_decl .)
    INT             reduce using rule 11 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> field_decl .)


state 20

    (12) class_body_decl -> method_decl .

    RBRACE          reduce using rule 12 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 12 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> method_decl .)
    VOID            reduce using rule 12 (class_body_decl -> method_decl .)
    ID              reduce using rule 12 (class_body_decl -> method_decl .)
    INT             reduce using rule 12 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 12 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> method_decl .)


state 21

    (21) visibility_mod -> PUBLIC .

    STATIC          reduce using rule 21 (visibility_mod -> PUBLIC .)
    VOID            reduce using rule 21 (visibility_mod -> PUBLIC .)
    ID              reduce using rule 21 (visibility_mod -> PUBLIC .)
    INT             reduce using rule 21 (visibility_mod -> PUBLIC .)
    BOOLEAN         reduce using rule 21 (visibility_mod -> PUBLIC .)
    FLOAT           reduce using rule 21 (visibility_mod -> PUBLIC .)


state 22

    (6) class_decl -> CLASS ID extends LBRACE error RBRACE .

    CLASS           reduce using rule 6 (class_decl -> CLASS ID extends LBRACE error RBRACE .)
    $end            reduce using rule 6 (class_decl -> CLASS ID extends LBRACE error RBRACE .)


state 23

    (9) class_body_decl_list -> class_body_decl_list class_body_decl .

    RBRACE          reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    VOID            reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    ID              reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    INT             reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    FLOAT           reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    STATIC          reduce using rule 9 (class_body_decl_list -> class_body_decl_list class_body_decl .)


state 24

    (4) class_decl -> CLASS ID extends LBRACE newscope class_body_decl_list RBRACE .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID extends LBRACE newscope class_body_decl_list RBRACE .)
    $end            reduce using rule 4 (class_decl -> CLASS ID extends LBRACE newscope class_body_decl_list RBRACE .)


state 25

    (20) mod -> visibility_mod storage_mod .

    VOID            reduce using rule 20 (mod -> visibility_mod storage_mod .)
    ID              reduce using rule 20 (mod -> visibility_mod storage_mod .)
    INT             reduce using rule 20 (mod -> visibility_mod storage_mod .)
    BOOLEAN         reduce using rule 20 (mod -> visibility_mod storage_mod .)
    FLOAT           reduce using rule 20 (mod -> visibility_mod storage_mod .)


state 26

    (24) storage_mod -> STATIC .

    VOID            reduce using rule 24 (storage_mod -> STATIC .)
    ID              reduce using rule 24 (storage_mod -> STATIC .)
    INT             reduce using rule 24 (storage_mod -> STATIC .)
    BOOLEAN         reduce using rule 24 (storage_mod -> STATIC .)
    FLOAT           reduce using rule 24 (storage_mod -> STATIC .)


state 27

    (27) type -> INT .

    ID              reduce using rule 27 (type -> INT .)
    LBRACKET        reduce using rule 27 (type -> INT .)


state 28

    (15) method_decl -> mod VOID . ID LPAREN methodscope param_list_opt RPAREN block

    ID              shift and go to state 34


state 29

    (29) type -> FLOAT .

    ID              reduce using rule 29 (type -> FLOAT .)
    LBRACKET        reduce using rule 29 (type -> FLOAT .)


state 30

    (14) field_decl -> mod var_decl .

    RBRACE          reduce using rule 14 (field_decl -> mod var_decl .)
    PUBLIC          reduce using rule 14 (field_decl -> mod var_decl .)
    PRIVATE         reduce using rule 14 (field_decl -> mod var_decl .)
    VOID            reduce using rule 14 (field_decl -> mod var_decl .)
    ID              reduce using rule 14 (field_decl -> mod var_decl .)
    INT             reduce using rule 14 (field_decl -> mod var_decl .)
    BOOLEAN         reduce using rule 14 (field_decl -> mod var_decl .)
    FLOAT           reduce using rule 14 (field_decl -> mod var_decl .)
    STATIC          reduce using rule 14 (field_decl -> mod var_decl .)


state 31

    (28) type -> BOOLEAN .

    ID              reduce using rule 28 (type -> BOOLEAN .)
    LBRACKET        reduce using rule 28 (type -> BOOLEAN .)


state 32

    (17) method_decl -> mod type . ID LPAREN param_list_opt RPAREN block
    (26) var_decl -> type . var_list SEMICOLON
    (31) var_list -> . var_list COMMA var
    (32) var_list -> . var
    (33) var -> . ID
    (34) var -> . var LBRACKET RBRACKET

    ID              shift and go to state 37

    var                            shift and go to state 35
    var_list                       shift and go to state 36

state 33

    (18) constructor_decl -> mod ID . LPAREN constructorscope param_list_opt RPAREN block
    (30) type -> ID .

    LPAREN          shift and go to state 38
    ID              reduce using rule 30 (type -> ID .)


state 34

    (15) method_decl -> mod VOID ID . LPAREN methodscope param_list_opt RPAREN block

    LPAREN          shift and go to state 39


state 35

    (32) var_list -> var .
    (34) var -> var . LBRACKET RBRACKET

    SEMICOLON       reduce using rule 32 (var_list -> var .)
    COMMA           reduce using rule 32 (var_list -> var .)
    LBRACKET        shift and go to state 40


state 36

    (26) var_decl -> type var_list . SEMICOLON
    (31) var_list -> var_list . COMMA var

    SEMICOLON       shift and go to state 42
    COMMA           shift and go to state 41


state 37

    (17) method_decl -> mod type ID . LPAREN param_list_opt RPAREN block
    (33) var -> ID .

    LPAREN          shift and go to state 43
    LBRACKET        reduce using rule 33 (var -> ID .)
    SEMICOLON       reduce using rule 33 (var -> ID .)
    COMMA           reduce using rule 33 (var -> ID .)


state 38

    (18) constructor_decl -> mod ID LPAREN . constructorscope param_list_opt RPAREN block
    (19) constructorscope -> .

    INT             reduce using rule 19 (constructorscope -> .)
    BOOLEAN         reduce using rule 19 (constructorscope -> .)
    FLOAT           reduce using rule 19 (constructorscope -> .)
    ID              reduce using rule 19 (constructorscope -> .)
    RPAREN          reduce using rule 19 (constructorscope -> .)

    constructorscope               shift and go to state 44

state 39

    (15) method_decl -> mod VOID ID LPAREN . methodscope param_list_opt RPAREN block
    (16) methodscope -> .

    INT             reduce using rule 16 (methodscope -> .)
    BOOLEAN         reduce using rule 16 (methodscope -> .)
    FLOAT           reduce using rule 16 (methodscope -> .)
    ID              reduce using rule 16 (methodscope -> .)
    RPAREN          reduce using rule 16 (methodscope -> .)

    methodscope                    shift and go to state 45

state 40

    (34) var -> var LBRACKET . RBRACKET

    RBRACKET        shift and go to state 46


state 41

    (31) var_list -> var_list COMMA . var
    (33) var -> . ID
    (34) var -> . var LBRACKET RBRACKET

    ID              shift and go to state 48

    var                            shift and go to state 47

state 42

    (26) var_decl -> type var_list SEMICOLON .

    RBRACE          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    error           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    IF              reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    WHILE           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    FOR             reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    RETURN          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    BREAK           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    CONTINUE        reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    LBRACE          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    INC             reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    DEC             reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    INT             reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    BOOLEAN         reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    FLOAT           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    ID              reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    THIS            reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    SUPER           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    LPAREN          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    NEW             reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    INT_CONST       reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    FLOAT_CONST     reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    STRING_CONST    reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    NULL            reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    TRUE            reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    FALSE           reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    ELSE            reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    PUBLIC          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    PRIVATE         reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    VOID            reduce using rule 26 (var_decl -> type var_list SEMICOLON .)
    STATIC          reduce using rule 26 (var_decl -> type var_list SEMICOLON .)


state 43

    (17) method_decl -> mod type ID LPAREN . param_list_opt RPAREN block
    (35) param_list_opt -> . param_list
    (36) param_list_opt -> .
    (37) param_list -> . param_list COMMA param
    (38) param_list -> . param
    (39) param -> . type ID
    (27) type -> . INT
    (28) type -> . BOOLEAN
    (29) type -> . FLOAT
    (30) type -> . ID

    RPAREN          reduce using rule 36 (param_list_opt -> .)
    INT             shift and go to state 27
    BOOLEAN         shift and go to state 31
    FLOAT           shift and go to state 29
    ID              shift and go to state 53

    param_list                     shift and go to state 49
    param                          shift and go to state 51
    param_list_opt                 shift and go to state 50
    type                           shift and go to state 52

state 44

    (18) constructor_decl -> mod ID LPAREN constructorscope . param_list_opt RPAREN block
    (35) param_list_opt -> . param_list
    (36) param_list_opt -> .
    (37) param_list -> . param_list COMMA param
    (38) param_list -> . param
    (39) param -> . type ID
    (27) type -> . INT
    (28) type -> . BOOLEAN
    (29) type -> . FLOAT
    (30) type -> . ID

    RPAREN          reduce using rule 36 (param_list_opt -> .)
    INT             shift and go to state 27
    BOOLEAN         shift and go to state 31
    FLOAT           shift and go to state 29
    ID              shift and go to state 53

    param_list                     shift and go to state 49
    param                          shift and go to state 51
    param_list_opt                 shift and go to state 54
    type                           shift and go to state 52

state 45

    (15) method_decl -> mod VOID ID LPAREN methodscope . param_list_opt RPAREN block
    (35) param_list_opt -> . param_list
    (36) param_list_opt -> .
    (37) param_list -> . param_list COMMA param
    (38) param_list -> . param
    (39) param -> . type ID
    (27) type -> . INT
    (28) type -> . BOOLEAN
    (29) type -> . FLOAT
    (30) type -> . ID

    RPAREN          reduce using rule 36 (param_list_opt -> .)
    INT             shift and go to state 27
    BOOLEAN         shift and go to state 31
    FLOAT           shift and go to state 29
    ID              shift and go to state 53

    param_list                     shift and go to state 49
    param                          shift and go to state 51
    param_list_opt                 shift and go to state 55
    type                           shift and go to state 52

state 46

    (34) var -> var LBRACKET RBRACKET .

    LBRACKET        reduce using rule 34 (var -> var LBRACKET RBRACKET .)
    SEMICOLON       reduce using rule 34 (var -> var LBRACKET RBRACKET .)
    COMMA           reduce using rule 34 (var -> var LBRACKET RBRACKET .)


state 47

    (31) var_list -> var_list COMMA var .
    (34) var -> var . LBRACKET RBRACKET

    SEMICOLON       reduce using rule 31 (var_list -> var_list COMMA var .)
    COMMA           reduce using rule 31 (var_list -> var_list COMMA var .)
    LBRACKET        shift and go to state 40


state 48

    (33) var -> ID .

    LBRACKET        reduce using rule 33 (var -> ID .)
    SEMICOLON       reduce using rule 33 (var -> ID .)
    COMMA           reduce using rule 33 (var -> ID .)


state 49

    (35) param_list_opt -> param_list .
    (37) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 35 (param_list_opt -> param_list .)
    COMMA           shift and go to state 56


state 50

    (17) method_decl -> mod type ID LPAREN param_list_opt . RPAREN block

    RPAREN          shift and go to state 57


state 51

    (38) param_list -> param .

    COMMA           reduce using rule 38 (param_list -> param .)
    RPAREN          reduce using rule 38 (param_list -> param .)


state 52

    (39) param -> type . ID

    ID              shift and go to state 58


state 53

    (30) type -> ID .

    ID              reduce using rule 30 (type -> ID .)


state 54

    (18) constructor_decl -> mod ID LPAREN constructorscope param_list_opt . RPAREN block

    RPAREN          shift and go to state 59


state 55

    (15) method_decl -> mod VOID ID LPAREN methodscope param_list_opt . RPAREN block

    RPAREN          shift and go to state 60


state 56

    (37) param_list -> param_list COMMA . param
    (39) param -> . type ID
    (27) type -> . INT
    (28) type -> . BOOLEAN
    (29) type -> . FLOAT
    (30) type -> . ID

    INT             shift and go to state 27
    BOOLEAN         shift and go to state 31
    FLOAT           shift and go to state 29
    ID              shift and go to state 53

    type                           shift and go to state 52
    param                          shift and go to state 61

state 57

    (17) method_decl -> mod type ID LPAREN param_list_opt RPAREN . block
    (40) block -> . LBRACE stmt_list RBRACE
    (41) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 62

    block                          shift and go to state 63

state 58

    (39) param -> type ID .

    COMMA           reduce using rule 39 (param -> type ID .)
    RPAREN          reduce using rule 39 (param -> type ID .)


state 59

    (18) constructor_decl -> mod ID LPAREN constructorscope param_list_opt RPAREN . block
    (40) block -> . LBRACE stmt_list RBRACE
    (41) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 62

    block                          shift and go to state 64

state 60

    (15) method_decl -> mod VOID ID LPAREN methodscope param_list_opt RPAREN . block
    (40) block -> . LBRACE stmt_list RBRACE
    (41) block -> . LBRACE stmt_list error RBRACE

    LBRACE          shift and go to state 62
